# domaintwistex

./: .gitignore  LICENSE  README.md  checksum-Elixir.DomainTwistex.Utils.exs  mix.exs
.github/workflows/: main.yml
lib/: domain_twist_ex.ex  utils.ex
lib/Permutate/: generate.ex
lib/Utils/ContentHash/: content_similarity.ex
lib/Utils/DNS/: domain_twist_dns.ex
lib/Utils/Helpers/: domain_twist_helpers.ex
lib/Utils/SPF/: provider_categories.ex  spf_parse_ex.ex
lib/Utils/SPF/providers/: business_services.ex  crm_platforms.ex  email_workspaces.ex  hosting_providers.ex  marketing_platforms.ex  security_services.ex  transactional_email.ex
lib/Utils/Whois/: whois_client.ex
lib/mix/tasks/: twist.ex  update_whois_servers.ex
native/domaintwistex/: Cargo.toml  README.md
native/domaintwistex/src/: lib.rs
priv/: keywords.txt  tlds.txt  whois_servers.json
test/: d_twistex_test.exs
