[package]
name = "domaintwistex"
version = "0.7.0"
edition = "2021"

[lib]
name = "domaintwistex"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.37"
twistrs = "0.9"
futures = "0.3"

[target.'cfg(target_os = "macos")']
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]

[target.x86_64-unknown-linux-musl]
rustflags = [
  "-C", "target-feature=-crt-static"
]

[profile.release]
lto = true
